--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,5 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(disk disk.c disk.h)
 add_executable(gen gen.c)
-add_executable(sched sched.c sched.h proc.c proc.h)
+add_executable(sched sched.c sched.h proc.c proc.h procgen.c procgen.h)
+add_executable(procgen procgen.c procgen.h)
