--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(disk disk.c disk.h)
 add_executable(gen gen.c)
-add_executable(sched sched.c sched.h proc.c proc.h procgen.c procgen.h)
+add_executable(sched sched.c sched.h proc.c proc.h procgen.c procgen.h page.c page.h)
 target_link_libraries(sched m)
 add_executable(procgen procgen.c procgen.h)
